--- a/src/app/widget/widget.component.scss
+++ b/src/app/widget/widget.component.scss
@@ -8,6 +8,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: -1;
+    z-index: 1;
     width: fit-content;
   }
